@@ -13,7 +13,7 @@ RUN apt-get update \
 COPY ./target/gamutkart.war /usr/local/tomcat/webapps/
 
 EXPOSE 8082
-ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "-jar", "/usr/local/tomcat/webapps/gamutkart.war"]
+ENTRYPOINT ENTRYPOINT ["java", "-jar", "/usr/local/tomcat/webapps/gamutkart.war"]
 
 
 
